apps/monitoring/loki/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.stadthagen.dev`)
      kind: Rule
      services:
        - name: loki-gateway
          port: 80
  tls:
    secretName: loki-tls
